assets/css/style.css
/* Google fonts api */
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Rock+Salt&display=swap');

*,
*::before,
*::after {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}


:root {
    /* color scheme */
    --light: rgb(108, 152, 170);
    --dark: rgb(73, 101, 101);
    --turq1: rgb(154, 218, 224);
    --turq2: rgb(32, 198, 203);
    --turq3: rgb(30, 174, 169);
    --white1: rgb(239, 247, 233);
    --sand1: rgb(235, 225, 215);
    --sand1a: rgba(235, 225, 215, 0.4);
    --sand1a_2: rgba(235, 225, 215, 0.7);
    --sand2: rgb(241, 222, 196);
    --sand2a: rgba(241, 222, 196, 0.4);
    --textdark: rgb(117, 117, 132);
    /* hamburger menu */
    --bar_width: 40px;
    --bar_height: 6px;
    --bar_gap: 4px;
    --hamburger_margin: 10px;
    --timing: 300ms ease-in-out;
    --hamburger_height: calc(var(--bar_height) * 3 + var(--bar_gap) * 2);
}

body {
    /* border: solid red 5px; */
    padding: 0;
    color: var(--white1);
    font-family: 'Montserrat', sans-serif;
    display: flex;
    min-height: 100vh;
    flex-direction: column;
    width: 100%;
}

h2,
h3,
h4,
h5,
h6 {
    font-family: 'Montserrat', sans-serif;
}

nav {
    position: relative;
}

header {
    transition: var(--timing);
    position: sticky;
    top: 0;
    z-index: 10;
    padding: 0 0 0 5px;
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-content: center;
    /* background: rgb(116, 197, 177); */
    background: var(--turq2);
    /* background: linear-gradient(180deg, rgba(32,198,203,1) 0%, rgba(30,174,169,1) 64%); */

    margin: 0;
    /* box-shadow: 0 3px 4px var(--turq3); */
}

header h1 {
    transition: var(--timing);
    font-family: "Rock Salt", cursive;
    align-self: center;
    font-size: 38px;
    color: var(--white1);
    margin-left: 20px;
}

h1 a {
    text-decoration: none;
    color: inherit;
}

/* Navigation links */
.menu {
    height: 100%;
    width: auto;
    background: var(--turq3);
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-content: center;
    flex-wrap: wrap;
    /* margin: 10px 0 0 0; */
    align-self: flex-end;

    font-family: 'Montserrat', sans-serif;
    font-size: 1.3em;
    /* font-weight: bold; */
    /* font-style: bold; */
    /* color: var(--sand2);     */
    /* border:rgb(22, 22, 22) solid 1px; */
}

.menu li {
    /* flex:auto; */
    list-style-type: none;
    /* border-right: rgb(0, 0, 0) solid 1px; */
    /* padding-right: 50px; */
    /* margin: 10px 20px; */
    /* padding: 36.5px 20px; */
    /* background: pink; */

    width: 100px;
    height: 90px;

    display: flex;

}

.menu li:hover,
.side_menu li:hover {
    transition: 200ms;
    background: var(--dark);
}

.menu a {
    text-decoration: none;
    color: inherit;

    display: flex;
    margin: auto;
    height: 100%;
    width: 100%;
}

.menu a p {
    margin: auto;
}

.active {
    background: var(--dark);
}


/* Main Content */
.main {
    display: flex;
    flex-direction: column;
    background-color: var(--sand1);
    flex: 1 0 auto;
    position: relative;
    width: 100%;
}

.hero_outer {
    display: flex;
    flex-direction: column;
    position: relative;
    width: 100%;
    background: lightblue;
}

.hero_image__index {
    height: 600px;
    width: 100%;
    background: url(../images/hero_image_min.jpg) no-repeat center;
    background-size: cover;
}

.cover_text {
    width: 35%;
    position: absolute;
    top: 55%;
    left: 5%;
    align-self: start;
    padding: 5px;
    background: rgb(73, 101, 101, 0.4);
    color: var(--sand1);
    font-size: 1.2em;
}

/* Blog section */

.blog__head {
    color: var(--textdark);
    position: absolute;
    left: 20px;
}

.blog__posts {
    /* background: var(--light); */
    /* padding-bottom: 1.5rem; */
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    align-content: center;
    padding: 15px;

    /* background: url(../images/blog_stock.jpg) no-repeat center ; */

    background-size: cover;
}

.blog__post {
    position: relative;
    margin: 1.5rem 0;
    height: 290px;
    width: 290px;
    background: rgb(183, 193, 202);
    border-radius: 15px;
    overflow: hidden;
}

.blog__post:hover {
    .blog__post__bg {
        opacity: 1;
    }
}

.blog__post__bg {
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
    /* background: red; */
    /* background: url(../images/blog_stock.jpg) no-repeat center ;
    background-size: cover; */
    opacity: 0.4;
    z-index: 1;
}

.blog__desc {
    position: relative;
    top: 50%;
    height: 50%;
    z-index: 5;
    display: flex;
    justify-items: center;
    align-items: flex-start;
    flex-direction: column;
    overflow: hidden;
    background-color: rgba(67, 138, 138, 0.685);
    padding: 10px;
    text-align: start;
}

.blog__desc h4 {
    padding: 3px;
}

/* Gallery */
.team {
    width: 100%;
    height: 600px;

    background: url(../images/beach_aerial_min.jpg) no-repeat center;
    background-size: cover;
    text-align: center;
    font-size: large;
    color: black;
}

.gallery {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    overflow: hidden;
    /* border: solid var(--dark) 2vw; */
    background-color: var(--turq3);
    /* border-right: solid var(--dark) 2.5vw;     */
    padding: 4vw 0.2vw;
    /* max-width: 30vw; */
}


.gallery__thumb {
    width: 30vw;
    margin: 2px;
    aspect-ratio: 1/1;

    position: relative;
    overflow: hidden;
}

.gallery__img {
    width: 100%;
    transition: 2s;
    aspect-ratio: 1/1;
}

.gallery__img:hover {
    transform: scale(1.1);
    aspect-ratio: auto;
    position: absolute;
    z-index: 2;
}

/* footer */

.map {
    display: flex;
}

.gmap {
    width: 100%;
}

a {
    text-decoration: none;
    color: inherit;
}
/* ... */

